--- a/index.html
+++ b/index.html
@@ -92,8 +92,33 @@
         </section>
     </header>
     <main>
-        <section class="">
-
+        <section class="recommendation">
+            <div class="recommendation_container">
+                <div class="recommendation_container--top">
+                    <img class="recommendation_container--top--img--mountains" src="./img/explore-mountains.png"
+                        alt="explore-mountains">
+                    <div class="recommendation_container--top--box">
+                        <h3 class="recommendation_container--top--box--title">The walkways of Indonesia spellbind</h3>
+                        <p class="recommendation_container--top--box--text">Lorem ipsum dolor sit amet, consectetur adip
+                            iscing elit. Fusce
+                            commodo
+                            magna et libero mollis rhoncus. </p>
+                        <button class="recommendation_container--top--box--btn">Learn More</button>
+                    </div>
+                </div>
+                <div class="recommendation_container--bottom">
+                    <div class="recommendation_container--bottom--box">
+                        <h3 class="recommendation_container--bottom--box--title">The walkways of Indonesia spellbind</h3>
+                        <p class="recommendation_container--bottom--box--text">Lorem ipsum dolor sit amet, consectetur adip
+                            iscing
+                            elit. Fusce
+                            commodo
+                            magna et libero mollis rhoncus. </p>
+                        <button class="recommendation_container--bottom--box--btn">Learn More</button>
+                    </div>
+                    <img class="recommendation_container--bottom--img--palms" src="./img/explore-palms.png" alt="explore-palms">
+                </div>
+            </div>
         </section>
     </main>
 </body>
