--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
             <div class="recommendation_container">
                 <div class="recommendation_container--top">
                     <div class="recommendation_container--top--block">
-                        <img class="recommendation_container--top--block--img--mountains"
-                            src="./img/explore-mountains.png" alt="explore-mountains">
+                        <img class="recommendation_container--top--block--img" src="./img/explore-mountains.png"
+                            alt="explore-mountains">
                         <div class="recommendation_container--top--block--box">
                             <h3 class="recommendation_container--top--block--box--title">The walkways of Indonesia
                                 spellbind
@@ -115,7 +115,8 @@
                 <div class="recommendation_container--bottom">
                     <div class="recommendation_container--bottom--block">
                         <div class="recommendation_container--bottom--block--box">
-                            <h3 class="recommendation_container--bottom--block--box--title">Perfect beaches exude relaxation and fun
+                            <h3 class="recommendation_container--bottom--block--box--title">Perfect beaches exude
+                                relaxation and fun
                             </h3>
                             <p class="recommendation_container--bottom--block--box--text">Lorem ipsum dolor sit amet,
                                 consectetur
@@ -126,13 +127,57 @@
                                 magna et libero mollis rhoncus. </p>
                             <button class="recommendation_container--bottom--block--box--btn">Learn More</button>
                         </div>
-                        <img class="recommendation_container--bottom--block--img--palms" src="./img/explore-palms.png"
+                        <img class="recommendation_container--bottom--block--img" src="./img/explore-palms.png"
                             alt="explore-palms">
                     </div>
                 </div>
             </div>
         </section>
+
+        <section class="secrets">
+            <div class="secrets_slider">
+                <h2 class="secrets_slider--title">Explore Our Secrets</h2>
+
+                <div class="secrets_slider--container">
+                    <button class="secrets_slider--container--perv">&#10094;</button>
+
+                    <div class="secrets_slider--container--track">
+                        <img src="./img/island-explore.png" alt="island-explore">
+                        <img src="./img/kids-explore.png" alt="kids-explore">
+                        <img src="./img/rice-plants-explore.png" alt="rice-plants-explore">
+                    </div>
+
+                    <button class="secrets_slider--container--next">&#10095;</button>
+                </div>
+
+                <div class="secrets_slider--container--dots"></div>
+            </div>
+            <div class="secrets_numbers">
+                <h3 class="secrets_numbers--title">By The Numbers</h3>
+                <p class="secrets_numbers--text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce commodo
+                    magna et libero.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <div class="secrets_numbers--container">
+                    <div class="secrets_numbers--container--box">
+                        <h4 class="secrets_numbers--container--box--title">100+</h4>
+                        <p class="secrets_numbers--container--box--text">Lorem ipsum dolor sit amet, consectetur
+                            adipiscing elit. Fusce commodo magna et libero.</p>
+                    </div>
+                    <div class="secrets_numbers--container--box">
+                        <h4 class="secrets_numbers--container--box--title">43,000+</h4>
+                        <p class="secrets_numbers--container--box--text">Lorem ipsum dolor sit amet, consectetur
+                            adipiscing elit. Fusce commodo.</p>
+                    </div>
+                    <div class="secrets_numbers--container--box">
+                        <h4 class="secrets_numbers--container--box--title">30+</h4>
+                        <p class="secrets_numbers--container--box--text">Lorem ipsum dolor sit amet, consectetur
+                            adipiscing elit. Fusce commodo magna et libero.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
