--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                         <p class="secrets_numbers--container--box--text">Lorem ipsum dolor sit amet, consectetur
                             adipiscing elit. Fusce commodo magna et libero.</p>
                     </div>
-                    <div class="secrets_numbers--container--box">
+                    <div class="secrets_numbers--container--box--2">
                         <h4 class="secrets_numbers--container--box--title">43,000+</h4>
                         <p class="secrets_numbers--container--box--text">Lorem ipsum dolor sit amet, consectetur
                             adipiscing elit. Fusce commodo.</p>
@@ -173,6 +173,14 @@
                             adipiscing elit. Fusce commodo magna et libero.</p>
                     </div>
                 </div>
+            </div>
+        </section>
+        <section class="hills">
+            <div class="hills_container">
+                <h3 class="hills_container--title">Our hills and valleys are like nothing you’ve seen.</h3>
+                <p class="hills_container--text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sit amet magna
+                    commodo, tempus dolor sit amet, laoreet elit. Donec mauris tortor.</p>
+                <button class="hills_container--btn">Learn More</button>
             </div>
         </section>
     </main>
