--- a/index.html
+++ b/index.html
@@ -178,9 +178,61 @@
         <section class="hills">
             <div class="hills_container">
                 <h3 class="hills_container--title">Our hills and valleys are like nothing you’ve seen.</h3>
-                <p class="hills_container--text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sit amet magna
+                <p class="hills_container--text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sit amet
+                    magna
                     commodo, tempus dolor sit amet, laoreet elit. Donec mauris tortor.</p>
                 <button class="hills_container--btn">Learn More</button>
+            </div>
+        </section>
+        <section class="videos">
+            <div class="videos_container">
+                <h3 class="videos_container--title">Live a life like you wouldn’t imagine, experience a life you
+                    wouldn’t expect.</h3>
+                <div class="videos_container--img--market">
+                    <img src="./img/market-video-explore.png" alt="market">
+                    <svg width="96" height="96" viewBox="0 0 96 96" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <rect width="96" height="96.0098" rx="48" fill="#E93A7D" />
+                        <path
+                            d="M57.5851 48.2031L42.7637 56.4397C42.5925 56.5365 42.4437 56.5476 42.3172 56.4732C42.1982 56.3988 42.1387 56.2649 42.1387 56.0714V39.6429C42.1387 39.4494 42.1982 39.3155 42.3172 39.2411C42.4437 39.1667 42.5925 39.1778 42.7637 39.2746L57.5851 47.5112C57.7562 47.6079 57.8418 47.7232 57.8418 47.8571C57.8418 47.9911 57.7562 48.1064 57.5851 48.2031Z"
+                            fill="white" />
+                    </svg>
+                </div>
+                <div class="videos_container--bottom">
+                    <div class="videos_container--bottom--box">
+                        <div class="videos_container--bottom--box--img">
+                            <img src="./img/nature-video-explore.png" alt="nature">
+                            <svg width="16" height="18" viewBox="0 0 16 18" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M15.4464 9.11816C15.7924 8.92843 15.7924 8.61593 15.4464 8.4262L0.624985 0.189592C0.279003 -0.00014019 -1.52588e-05 0.16727 -1.52588e-05 0.557895V16.9865C-1.52588e-05 17.3771 0.279003 17.5445 0.624985 17.3548L15.4464 9.11816Z"
+                                    fill="white" />
+                            </svg>
+                        </div>
+                        <div class="videos_container--bottom--box--info">
+                            <h4>In The Country</h4>
+                            <p class="videos_container--bottom--box--info--text">Lorem ipsum dolor sit amet, consectetur
+                                adipiscing elit. Phasellus dapibus mauris in
+                                lectus tempus.</p>
+                        </div>
+                    </div>
+                    <div class="videos_container--bottom--box">
+                        <div class="videos_container--bottom--box--img">
+                            <img class="videos_container--bottom--box--img" src="./img/city-video-explore.png"
+                                alt="city">
+                            <svg width="16" height="18" viewBox="0 0 16 18" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M15.4464 9.11816C15.7924 8.92843 15.7924 8.61593 15.4464 8.4262L0.624985 0.189592C0.279003 -0.00014019 -1.52588e-05 0.16727 -1.52588e-05 0.557895V16.9865C-1.52588e-05 17.3771 0.279003 17.5445 0.624985 17.3548L15.4464 9.11816Z"
+                                    fill="white" />
+                            </svg>
+                        </div>
+                        <div class="videos_container--bottom--box--info">
+                            <h4>In The City</h4>
+                            <p class="videos_container--bottom--box--info--text2">Lorem ipsum dolor sit amet,
+                                consectetur adipiscing elit. Phasellus dapibus mauris in.</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
