--- a/index.html
+++ b/index.html
@@ -235,6 +235,9 @@
                 </div>
             </div>
         </section>
+        <section class="gallery">
+           
+        </section>
     </main>
 
     <script src="script.js"></script>
