--- a/index.html
+++ b/index.html
@@ -260,7 +260,8 @@
                     <div class="tutorial_container--block--steps">
                         <div class="tutorial_container--block--steps--box">
                             <h4 class="tutorial_container--block--steps--box--title">Bookings your flights</h4>
-                            <p class="tutorial_container--block--steps--box--text--1">Lorem ipsum dolor sit amet, consectetur
+                            <p class="tutorial_container--block--steps--box--text--1">Lorem ipsum dolor sit amet,
+                                consectetur
                                 adipiscing elit.
                                 Phasellus dapibus mauris in lectus tempus, eget tincidunt lacus varius. Sed euismod orci
                                 dictum
@@ -269,7 +270,8 @@
                         </div>
                         <div class="tutorial_container--block--steps--box">
                             <h4 class="tutorial_container--block--steps--box--title">Choosing your hotel</h4>
-                            <p class="tutorial_container--block--steps--box--text--2">Lorem ipsum dolor sit amet, consectetur
+                            <p class="tutorial_container--block--steps--box--text--2">Lorem ipsum dolor sit amet,
+                                consectetur
                                 adipiscing elit.
                                 Phasellus dapibus mauris in lectus tempus, eget tincidunt lacus varius. Sed euismod orci
                                 dictum
@@ -278,11 +280,19 @@
                             <div class="tutorial_container--block--steps--box--travel">
                                 <div class="tutorial_container--block--steps--box--travel--img">
                                     <img src="./img/tutorial-travel-explore.png" alt="travel">
+                                    <svg width="16" height="18" viewBox="0 0 16 18" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M15.4464 9.11816C15.7924 8.92843 15.7924 8.61593 15.4464 8.4262L0.624985 0.189592C0.279003 -0.00014019 -1.52588e-05 0.16727 -1.52588e-05 0.557895V16.9865C-1.52588e-05 17.3771 0.279003 17.5445 0.624985 17.3548L15.4464 9.11816Z"
+                                            fill="white" />
+                                    </svg>
                                 </div>
                                 <div class="tutorial_container--block--steps--box--travel--info">
-                                    <h4 class="tutorial_container--block--steps--box--travel--info--title">Travelling there
+                                    <h4 class="tutorial_container--block--steps--box--travel--info--title">Travelling
+                                        there
                                     </h4>
-                                    <p class="tutorial_container--block--steps--box--travel--info--text">Lorem ipsum dolor sit
+                                    <p class="tutorial_container--block--steps--box--travel--info--text">Lorem ipsum
+                                        dolor sit
                                         amet,
                                         consectetur adipiscing elit. Phasellus dapibus mauris in lectus tempus, eget
                                         tincidunt.
@@ -292,7 +302,8 @@
                         </div>
                         <div class="tutorial_container--block--steps--box">
                             <h4 class="tutorial_container--block--steps--box--title">Planning your experiences</h4>
-                            <p class="tutorial_container--block--steps--box--text--3">Lorem ipsum dolor sit amet, consectetur
+                            <p class="tutorial_container--block--steps--box--text--3">Lorem ipsum dolor sit amet,
+                                consectetur
                                 adipiscing elit.
                                 Phasellus dapibus mauris in lectus tempus, eget tincidunt lacus varius. </p>
                             <button class="tutorial_container--block--steps--box--btn">Learn More</button>
