--- a/index.html
+++ b/index.html
@@ -313,6 +313,28 @@
             </div>
         </section>
     </main>
+    <footer class="footer">
+        <div class="footer_container">
+            <div class="footer_container--box">
+                <img class="footer_container--box--img" src="./img/footer-logo-explore.svg" alt="footer-logo-explore">
+                <div class="footer_container--box--nav">
+                    <a class="footer_container--box--nav--link" href="#">About</a>
+                    <a class="footer_container--box--nav--link" href="#">Pricing</a>
+                    <a class="footer_container--box--nav--link" href="#">Company</a>
+                    <a class="footer_container--box--nav--link" href="#">Blog</a>
+                </div>
+            </div>
+            <div class="footer_container--social">
+                <div class="footer_container--social--icons">
+                    <img src="./img/facebook-explore.svg" alt="facebook">
+                    <img src="./img/in-explore.svg" alt="linkedin">
+                    <img src="./img/google-explore.svg" alt="google">
+                </div>
+                <p class="footer_container--social--copyright">Copyright © 2019</p>
+            </div>
+        </div>
+        <img src="./img/arrow-explore.svg" id="scrollTopBtn" alt="Scroll to top">
+    </footer>
 
     <script src="script.js"></script>
 </body>
