--- a/index.html
+++ b/index.html
@@ -243,9 +243,29 @@
                 </div>
             </div>
         </section>
+        
         <section class="gallery">
-
+            <div class="gallery_container">
+                <h3 class="gallery_container--title">Photo Gallery</h3>
+                <p class="gallery_container--text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
+                    dapibus mauris in lectus tempus, eget tincidunt.</p>
+                <div class="gallery_container--box">
+                    <div class="gallery_container--box--img--1"><img src="./img/gallery-1-explore.png"
+                            alt="gallery-1-explore"></div>
+                    <div class="gallery_container--box--img--2"><img src="./img/gallery-2-explore.png"
+                            alt="gallery-2-explore"></div>
+                    <div class="gallery_container--box--img--3"><img src="./img/gallery-3-explore.png"
+                            alt="gallery-3-explore"></div>
+                    <div class="gallery_container--box--img--4"><img src="./img/gallery-4-explore.png"
+                            alt="gallery-4-explore"></div>
+                    <div class="gallery_container--box--img--5"><img src="./img/gallery-5-explore.png"
+                            alt="gallery-5-explore"></div>
+                    <div class="gallery_container--box--img--6"><img src="./img/gallery-6-explore.png"
+                            alt="gallery-6-explore"></div>
+                </div>
+            </div>
         </section>
+
         <section class="tutorial">
             <div class="tutorial_container">
                 <h3 class="tutorial_container--title">Getting there</h3>
